--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js"
+	"test": "echo \"Error: no test specified\" && exit 1",
+	"start": "node ./settings.js",
+	"installation": "node ./installation.js"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/andrew-codes/devtools.git"
+	"type": "git",
+	"url": "https://github.com/andrew-codes/devtools.git"
   },
   "author": "Andrew Smith <andrew@WeAreSoftwareCraftsmen.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/andrew-codes/devtools/issues"
+	"url": "https://github.com/andrew-codes/devtools/issues"
   },
   "homepage": "https://github.com/andrew-codes/devtools",
   "dependencies": {
-    "babel": "^5.6.14"
+	"babel": "^5.6.14"
   }
 }
