--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "devtools",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Andrew Smith's devtools settings and installation.",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./settings.js",
-    "installation": "node ./installation.js"
+	"start": "node ./installation && node ./settings.js",
+	"settings": "node ./settings.js",
+	"installation": "node ./installation.js"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/andrew-codes/devtools.git"
+	"type": "git",
+	"url": "https://gitlab.com/andrew-codes/devtools.git"
   },
   "author": "Andrew Smith <andrew@WeAreSoftwareCraftsmen.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/andrew-codes/devtools/issues"
+	"url": "https://gitlab.com/andrew-codes/devtools/issues"
   },
-  "homepage": "https://github.com/andrew-codes/devtools",
+  "homepage": "https://gitlab.com/andrew-codes/devtools",
   "dependencies": {
-    "babel": "^5.6.14",
-    "mkdirp": "^0.5.1"
+	"babel": "5.6.14",
+	"mkdirp": "0.5.1"
   }
 }
